--- a/public/views/login.html
+++ b/public/views/login.html
@@ -15,7 +15,7 @@
     	    <input type="text" ng-model="vm.password" placeholder="password"/>
     	</div>
     	<div class="log-submit">
-    		<input type="submit" value="ENTER" ng-click="vm.login()"/>
+    		<input type="submit" value="ENTER" ng-click="vm.login(); $hide()"/>
         </div>
     </div>
 </div>
