--- a/public/style/all.css
+++ b/public/style/all.css
@@ -10,5 +10,7 @@
 @import url("components/info.post.css");
 @import url("components/login.css");
 @import url("components/signup.css");
+@import url("components/userpage.css");
+@import url("components/delete.css");
 @import url("components/settings.css");
 @import url("vendor/reset.css");
