--- a/public/style/components/modaladd.css
+++ b/public/style/components/modaladd.css
@@ -10,9 +10,7 @@
     align-items: center;}
 .modal-wrapper{
     background-image: url(../../images/forsmall.jpg);
-    border-radius: 9px;
-    width:400px;
-    height:400px;}
+    border-radius: 9px;}
 .imgcross{
     width:100%;
     height:20px;
