--- a/public/style/components/modalcorrect.css
+++ b/public/style/components/modalcorrect.css
@@ -7,31 +7,23 @@
     left:0;
     display:flex!important; /*библиотека модала мешает поэтому ставим приоритет*/
     justify-content:center;
-    align-items: center;
-}
+    align-items: center;}
 .modalcor-wrapper{
     border-radius: 9px;
-    width:400px;
-    height:400px;
-    background-image: url(../../images/forsmall.jpg);;
-}
+    background-image: url(../../images/forsmall.jpg);;}
 .imgcancel{
     width:100%;
     height:20px;
     right:0;
     display:flex;
-    justify-content: flex-end;
-}
+    justify-content: flex-end;}
 .imgcancelplace{
     width:18px;
-    height:18px;
-}
+    height:18px;}
 .imgcancel img{
     width:100%;
-    height:100%;
-}
+    height:100%;}
 .imgcancelplace :hover{
     background:#0077b7;
-    border-radius: 9px;
-}
+    border-radius: 9px;}
 
