--- a/public/style/components/wrapper.css
+++ b/public/style/components/wrapper.css
@@ -6,5 +6,4 @@
     min-height:calc(100vh - 60px);
     padding:20px;
     display: flex;
-    justify-content:center;
-}
+    justify-content:center;}
