--- a/public/style/all.css
+++ b/public/style/all.css
@@ -13,4 +13,5 @@
 @import url("components/userpage.css");
 @import url("components/delete.css");
 @import url("components/settings.css");
+@import url("components/commEdit.css");
 @import url("vendor/reset.css");
