--- a/public/style/components/home.css
+++ b/public/style/components/home.css
@@ -6,7 +6,10 @@
     background-image: url(../../images/forsmall.jpg);
     border-radius: 9px;}
 .postshome-item{
+    margin-top: 10px;
+    margin-right: 10px;
     height: 265px;
+    background: #e4c26a;
     border-radius: 9px;
     width:200px;
     padding: 10px;
@@ -18,14 +21,14 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
-    background: #d7e0e7;
+    background: #ad8f42;
     border-radius: 9px;}
 .postshome-item--img img{
     height: 200px;
     border-radius: 9px;}
 .postshomefullname{
     width:100%;
-    height: 30px;
+    height: 15px;
     overflow: hidden;
     padding: 0px 10px;}
 .postshome-item--subtitle{
@@ -35,3 +38,13 @@
     padding: 0px 10px;}
 .postshome-item:hover{
     background:#76b2c5;}
+.autorInfo{
+    display: flex;
+    padding: 0px 5px}
+.avaOnPost{
+    width:20px;
+    border-radius: 4px;
+    height: 20px;}
+.username{
+    padding: 1px 5px;
+    font-size: 20px;}
