--- a/public/style/components/signup.css
+++ b/public/style/components/signup.css
@@ -12,7 +12,7 @@
     background-image: url(../../images/forsmall.jpg);
     border-radius: 9px;
     width:400px;
-    height:360px;}
+    height:440px;}
 .sign-imgcross{
     width:100%;
     height:20px;
@@ -80,6 +80,5 @@
     height: 20px;}
 .sign-gender span{
     padding: 0px 15px;
-    font-size: 18px;
-}
+    font-size: 18px;}
     
