--- a/public/views/post.html
+++ b/public/views/post.html
@@ -5,57 +5,64 @@
                 <img src="images/ramm.png">
             </div>
             <div class="info-post-img">
-                <img  ng-src="{{vm.item.img}}">
+                <img  ng-src="{{vm.blog.img}}">
             </div>
         </div>
         <div class="info-post--desc">
             <div>
                 <span>Название:</span>
-                <p ng-bind="vm.item.title"></p>
+                <p ng-bind="vm.blog.title"></p>
             </div>
             <div>
                 <span>Дата:</span>
-                <p ng-bind="vm.item.date | date"></p>
+                <p ng-bind="vm.blog.date | date"></p>
             </div>
-            <!--<div>-->
-            <!--    <span>Автор:</span>-->
-            <!--    <p ng-bind="vm.item.user"></p>-->
-            <!--</div>-->
             <div>
                 <span>Описанние:</span>
-                <p ng-bind="vm.item.description"></p>
+                <p ng-bind="vm.blog.description"></p>
             </div>
         </div>
     </div>
-    <div class="rate-post">
-        <div class="post-comment">
-            <div class="commTitle">
-                <p >Написать комментарий</p>
-            </div>
-            <div class="inputcomm">
-                <textarea placeholder="input for comment" ng-model="vm.comm" class="input-comment"/></textarea>
-                <input type="submit" class="subcomm"ng-click="vm.comment(); $hide"/>
-            </div>
-            <div class="postallcomments" ng-repeat =" item in vm.allcomms" > 
-                <div class="comm2p">
-                    <p class="commp1" ng-bind="item.user.name"></p> 
-                    <p class="commp2" ng-bind="item.description"></p> 
-                </div>
-            </div>
+    
+    <div class="likes-post">
+        <div class="post-place" ng-click="vm.myLike()">
+        <!--<div ng-repeat="item in vm.alllikes">-->
+            <!--<p ng-if="vm.mylike" > 1 </p> -->
+            <!--<p ng-if="!vm.mylike" > 0 </p> -->
+        <!--</div>-->
+            <p class="postLike" ng-bind="vm.alllikes"></p>
+            <img class="postHeart" ng-src="{{vm.vaildLike}}">
         </div>
-        <div class="likes-post" ng-click="vm.myLike()">
-            <div class="post-place">
-            <!--<div ng-repeat="item in vm.alllikes">-->
-                <!--<p ng-if="vm.mylike" > 1 </p> -->
-                <!--<p ng-if="!vm.mylike" > 0 </p> -->
-            <!--</div>-->
-                <p ng-bind="vm.alllikes"></p>
+        <!--<p class="likeQ">Who Liked?</p>-->
+        <!--<div class="personWhoLiked" >-->
+        <!--    <div ng-repeat="item in vm.alllikes">-->
+        <!--        <p ng-bind="item.user.name"> </p> -->
+        <!--    </div>-->
+        <!--</div>-->
+    </div>
+    <div class="post-comment">
+        <div class="commTitle">
+            <p >Написать комментарий</p>
+        </div>
+        <div class="inputcomm" ng-if="!vm.newuser">
+            <textarea placeholder="input for comment" ng-model="vm.comm" class="input-comment"/></textarea>
+            <input type="submit" class="subcomm"ng-click="vm.comment(); $hide"/>
+        </div>
+        <div class="postallcomments" ng-repeat =" item in vm.allcomms" ng-change="vm.justdoit(item.id)"> 
+            <div class="comm2p">
+                <div class="commp1">
+                    <img ng-src="{{item.user.img}}">
+                    <p ng-bind="item.user.name"></p>
+                    <!--<p ng-bind="vm.blog.user"></p>-->
+                    <!--who wrote a comment item.user._id-->
+                </div>    
+                <p class="commp2" ng-bind="item.description"></p> 
             </div>
-            <p class="likeQ">Who Liked?</p>
-            <div class="personWhoLiked" >
-                <div ng-repeat="item in vm.alllikes">
-                    <p ng-bind="item.user.name"> </p> 
-                </div>
+            <img ng-if="((currentUser._id == vm.blog.user) || (currentUser._id == item.user._id))" src="images/garbage.svg" ng-click="vm.deleteComm(item)" width="30px" height="30px">
+            <img ng-if="(currentUser._id == item.user._id)" src="images/wrench.png" ng-click="vm.editComm()" width="30px" height="30px">
+            <div class="commStatus">
+                <p class="commLikes" ng-bind="vm.commLikes.length"></p>
+                <img class="commHeart" ng-click="vm.functionComm(item.id)" ng-src="{{vm.heartComm}}">
             </div>
         </div>
     </div>
