--- a/public/style/all.css
+++ b/public/style/all.css
@@ -14,4 +14,6 @@
 @import url("components/delete.css");
 @import url("components/settings.css");
 @import url("components/commEdit.css");
+@import url("components/pageination.css");
+@import url("components/chat.css");
 @import url("vendor/reset.css");
