--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -10,7 +10,7 @@
         </div>
            <div class ="form-filed">
 		        <span class="autoava">
-      		        <img id="coutAva"class ="form-filedimg" ng-src="{{vm.user.img}}">
+      		        <img id="coutAva"class ="form-filedimg" ng-src="{{vm.fakeava}}">
 		        </span>
 				<input id="img-ava" class="input-file" type="file" file-model="vm.file" >
 		 </div>
