--- a/prefixed/home.css
+++ b/prefixed/home.css
@@ -1,9 +1,10 @@
 .postshome{
     width: 100%;
     padding: 40px 10px 10px;
-    min-height: 645px;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
     background-image: url(../../images/forsmall.jpg);
     border-radius: 9px;}
 .postshome-item{
@@ -20,8 +21,10 @@
     width: 100%;
     height: 200px;
     overflow: hidden;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -ms-flex-pack: center;
+        justify-content: center;
     background: #ad8f42;
     border-radius: 9px;}
 .postshome-item--img img{
@@ -40,6 +43,7 @@
 .postshome-item:hover{
     background:#76b2c5;}
 .autorInfo{
+    display: -ms-flexbox;
     display: flex;
     padding: 0px 5px}
 .avaOnPost{
