--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,5 +1,8 @@
 <div class="modallog">
     <div class="modallog-wrapper">
+        <form ng-submit="vm.login(); $hide()">
+            
+        
         <div class="log-imgcross" bgcolor="red" >
             <div class="log-imgcrossplace">
                 <img src="images/cancel.png" ng-click="$hide()">
@@ -15,7 +18,8 @@
     	    <input type="text" ng-model="vm.password" placeholder="password"/>
     	</div>
     	<div class="log-submit">
-    		<input type="submit" value="ENTER" ng-click="vm.login(); $hide()"/>
+    		<input type="submit" value="ENTER" />
         </div>
+        </form>
     </div>
 </div>
